# oxinum

./: CHANGELOG.md  Cargo.toml  Dockerfile.ffi-audit  README.md  TODO.md  deny.toml  proptest.toml
.config/: nextest.toml
crates/oxinum/: Cargo.toml  README.md  TODO.md
crates/oxinum-complex/: Cargo.toml  README.md  TODO.md
crates/oxinum-complex/benches/: complex_transcendental.rs
crates/oxinum-complex/src/: convert.rs  fmt.rs  inverse_trig.rs  lib.rs  num_traits_impl.rs  ops.rs  serde_impl.rs  transcendental.rs  trig.rs
crates/oxinum-complex/src/native/: complex.rs  complex_ops.rs  convert.rs  core_traits.rs  inverse_trig.rs  mod.rs  num_traits_impl.rs  serde_impl.rs  transcendental.rs  trig.rs
crates/oxinum-complex/tests/: complex_known_values.rs  complex_ops.rs  complex_trig.rs  native_complex.rs  native_properties.rs  parity_cross_validation.rs  properties.rs  scirs2_arbitrary_complex_compat.rs  serde_roundtrip.rs
crates/oxinum-core/: Cargo.toml  README.md  TODO.md
crates/oxinum-core/src/: lib.rs
crates/oxinum-core/tests/: scirs2_trait_hierarchy_compat.rs
crates/oxinum-float/: Cargo.toml  README.md  TODO.md
crates/oxinum-float/benches/: alloc_profile.rs  constants.rs  transcendentals.rs
crates/oxinum-float/src/: constants.rs  elementary.rs  lib.rs  mp_float.rs  precision.rs  special.rs  trig.rs
crates/oxinum-float/src/native/: atan.rs  binary_splitting.rs  bs_transcendental.rs  constants.rs  context.rs  core_traits.rs  float.rs  float_add.rs  float_convert.rs  float_div.rs  float_exp.rs  float_ln.rs  float_mul.rs  float_sqrt.rs  format_ext.rs  ln_agm.rs  mod.rs  nonfinite.rs  num_traits_impl.rs  pow.rs  serde_impl.rs  trig.rs
crates/oxinum-float/tests/: free_fn_trig_accuracy.rs  fuzz_parsers.rs  native_constants.rs  native_context.rs  native_core_traits.rs  native_float.rs  native_format.rs  native_nonfinite.rs  native_num_traits.rs  native_transcendentals.rs  properties.rs  scirs2_float_compat.rs  wrapper_polish.rs
crates/oxinum-int/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxinum-int/benches/: alloc_profile.rs  bitops.rs  div.rs  factorial.rs  gcd.rs  modexp.rs  mul.rs  primality.rs
crates/oxinum-int/src/: lib.rs  number_theory.rs  traits.rs
crates/oxinum-int/src/native/: bitwise.rs  bytes_signed.rs  convert.rs  core_traits.rs  div.rs  ext_gcd.rs  factorial.rs  gcd.rs  int.rs  lucas.rs  mod.rs  mod_arith.rs  montgomery.rs  mul.rs  num_traits_impl.rs  ops_int.rs  ops_uint.rs  primality.rs  radix.rs  rand_impl.rs  roots.rs  sieve.rs  simd_ops.rs  uint.rs
crates/oxinum-int/tests/: fuzz_parsers.rs  native_core_traits.rs  native_int.rs  native_lehmer.rs  native_mod_arith.rs  native_newton_div.rs  native_num_traits.rs  native_number_theory.rs  native_rand.rs  native_toom3.rs  native_uint.rs  scirs2_int_compat.rs
crates/oxinum-rational/: Cargo.toml  README.md  TODO.md
crates/oxinum-rational/benches/: alloc_profile.rs  rational_arith.rs
crates/oxinum-rational/src/: convert.rs  enumerate.rs  lib.rs  ops.rs
crates/oxinum-rational/src/native/: continued_fraction.rs  convert.rs  core_traits.rs  mod.rs  num_traits_impl.rs  rational.rs  rational_ops.rs  serde_impl.rs
crates/oxinum-rational/tests/: native_core_traits.rs  native_num_traits.rs  native_rational.rs  scirs2_rational_compat.rs
crates/oxinum/benches/: vs_num_bigint.rs
crates/oxinum/examples/: exact_rational_linear_solve.rs  high_precision_pi.rs
crates/oxinum/src/: constants.rs  convert.rs  lib.rs  parse.rs  prelude.rs
crates/oxinum/tests/: arithmetic.rs  machin_pi.rs  native_facade.rs  rational_determinant.rs  scirs2_facade_compat.rs
scripts/: ffi-audit.sh
