[workspace]
resolver = "2"
members = [
    "crates/oxinum-core",
    "crates/oxinum-int",
    "crates/oxinum-float",
    "crates/oxinum-rational",
    "crates/oxinum-complex",
    "crates/oxinum",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
authors = ["COOLJAPAN OU (Team Kitasan)"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxinum"
description = "OxiNum is the COOLJAPAN Pure-Rust arbitrary-precision math layer (GMP/MPFR-free)."

[workspace.dependencies]
oxinum-core     = { path = "crates/oxinum-core",     version = "0.1.3" }
oxinum-int      = { path = "crates/oxinum-int",      version = "0.1.3" }
oxinum-float    = { path = "crates/oxinum-float",    version = "0.1.3" }
oxinum-rational = { path = "crates/oxinum-rational", version = "0.1.3" }
oxinum-complex  = { path = "crates/oxinum-complex",  version = "0.1.3" }
# external — Pure Rust only
dashu-base   = { version = "0.4" }
dashu-int    = { version = "0.4" }
dashu-float  = { version = "0.4" }
dashu-ratio  = { version = "0.4" }
dashu-macros = { version = "0.4" }
proptest     = "1.11"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
num-traits   = { version = "0.2", default-features = false }
num-complex  = { version = "0.4.6", default-features = false }
rand         = { version = "0.10", default-features = false, features = ["std_rng"] }
criterion    = { version = "0.8", default-features = false }
rayon        = { version = "1.12.0", default-features = false }
