[package]
name = "oxinum-complex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Arbitrary-precision complex numbers for OxiNum (CBig over DBig; Pure Rust, GMP/MPFR-free)"
categories = ["mathematics", "algorithms"]
keywords = ["bignum", "complex", "arbitrary-precision", "cooljapan", "oxinum"]

[features]
default = []
serde = ["dep:serde", "dashu-float/serde", "oxinum-float/serde", "oxinum-core/serde"]
num-traits = ["dep:num-traits"]
num-complex = ["dep:num-complex"]

[dependencies]
oxinum-core  = { workspace = true }
oxinum-float = { workspace = true }
dashu-float  = { workspace = true }
dashu-base   = { workspace = true }
serde        = { workspace = true, optional = true }
num-traits   = { workspace = true, optional = true }
num-complex  = { workspace = true, optional = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }
criterion  = { workspace = true }

[[bench]]
name = "complex_transcendental"
harness = false
