[package]
name = "oxinum-rational"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Exact rational numbers for OxiNum (RBig via dashu-ratio)"
categories = ["mathematics", "algorithms"]
keywords = ["bignum", "rational", "fraction", "cooljapan", "oxinum"]

[features]
default = []
serde = ["dep:serde", "dashu-ratio/serde", "oxinum-int/serde"]
num-traits = ["dep:num-traits"]

[dependencies]
oxinum-core  = { workspace = true }
oxinum-int   = { workspace = true }
oxinum-float = { workspace = true }
dashu-ratio  = { workspace = true }
dashu-int    = { workspace = true }
dashu-base   = { workspace = true }
serde        = { workspace = true, optional = true }
num-traits   = { workspace = true, optional = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }
criterion  = { workspace = true }

[[bench]]
name = "rational_arith"
harness = false
